kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tic-tac-toe
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
  labels:
    app: tic-tac-toe
